--- a/views/list.ejs
+++ b/views/list.ejs
@@ -21,7 +21,8 @@
 
         <form class="item" action="/" method="post">
             <input type="text" name="newItem" placeholder="Add a task" autocomplete="off">
-            <button type="submit" name="list" value=<%= listTitle %>>+</button>
+            <input type="hidden" name="list" value="<%= listTitle %>">
+            <button type="submit">+</button>
         </form>
     </section>
 
